--- a/css/style.css
+++ b/css/style.css
@@ -52,4 +52,20 @@ body {
   flex: 0 0 18%; }
 
 .hotel-view {
-  background-color: #fff; }
+  background-color: #fff;
+  flex: 1; }
+
+.logo {
+  height: 3.25rem; }
+
+.search__icon {
+  height: 2rem;
+  width: 2rem; }
+
+.user-nav__icon {
+  height: 2.25rem;
+  width: 2.25rem; }
+
+.user-nav__user-photo {
+  width: 3.75rem;
+  border-radius: 50%; }
