--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -197,7 +197,7 @@
 .overview {
    display: flex;
    align-items: center;
-   border-bottom: 1px solid var(--color-grey-light-2);
+   border-bottom: var(--line);
 
    &__heading {
       font-size: 2.25rem;
@@ -265,8 +265,17 @@
    cursor: pointer;
    transition: all .2s;
 
+   & span {
+      margin-left: .3rem;
+      transition: margin-left .2s;
+   }
+
    &:hover {
       color: var(--color-grey-dark-1);
+
+      span {
+         margin-left: .8rem;
+      }
    }
 
    &:focus {
@@ -289,5 +298,134 @@
    100% {
       transform: scale(1);
       box-shadow: none;
+   }
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// PARAGRAPH
+.paragraph:not(:last-of-type) {
+   margin-bottom: 2rem;
+} 
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// LIST
+.list {
+   list-style: none;
+   margin: 3rem 0;
+   padding: 3rem 0;
+   border-top: var(--line);
+   border-bottom: var(--line);
+
+   display: flex;
+   flex-wrap: wrap;
+
+   &__item {
+      flex: 0 0 50%;
+      margin-bottom: .7rem;
+
+      &::before {
+         content: '';
+         display: inline-block;
+         height: 1rem;
+         width: 1rem;
+         margin-right: .7rem;
+
+         // // Older Browsers
+         // background-image: url('../img/chevron-thin-right.svg');
+         // background-image: cover;
+
+         // Masks
+         background-color: var(--color-primary);
+         -webkit-mask-image: url('../img/chevron-thin-right.svg');
+         -webkit-mask-size: cover;
+      }
+   }
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// RECOMMEND
+.recommend {
+   font-size: 1.3rem;
+   color: var(--color-grey-dark-3);
+   display: flex;
+   align-items: center;
+
+   &__photo {
+      box-sizing: content-box;
+      height: 4rem;
+      width: 4rem;
+      border-radius: 50%;
+      border: 3px solid #fff;
+      
+      &:not(:last-child) {
+         margin-right: -1.5rem;
+      }
+   }
+
+   &__count {
+      margin-right: auto;
+   }
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// REVIEWS
+.review {
+   background-color: #fff;
+   box-shadow: var(--shadow-light);
+   padding: 3rem;
+   margin-bottom: 3.5rem;
+   position: relative;
+   overflow: hidden;
+
+   &__text {
+      z-index: 2;
+      position: relative;
+   }
+
+   &__user {
+      display: flex;
+      align-items: center;
+      margin-top: 2rem;
+   }
+
+   &__photo {
+      height: 4.5rem;
+      width: 4.5rem;
+      border-radius: 50%;
+      margin-right: 1.5rem;
+   }
+
+   &__user-box {
+      margin-right: auto;
+   }
+
+   &__user-name {
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: 1.1rem;
+      margin-bottom: .4rem;
+   }
+
+   &__user-date {
+      font-size: 1rem;
+      color: var(--color-grey-dark-3);
+   }
+
+   &__rating {
+      color: var(--color-primary);
+      font-size: 2.4rem;
+      font-weight: 300;
+   }
+
+   &::before {
+      content: '\201C';
+      position: absolute;
+      top: -2.75rem;
+      left: -1rem;
+      line-height: 1;
+      font-size: 20rem;
+      color: var(--color-grey-light-2);
+      font-family: sans-serif;
+      z-index: 1;
    }
 }
